--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "build:esm": "tsc --build tsconfig.esm.json",
     "build:cjs": "tsc --build tsconfig.cjs.json",
     "build:copy-package-json": "ts-node-esm scripts/build/copy-package-json.ts",
-    "clean": "npm run clean:lib && npm run test:cjs:clean",
-    "clean:lib": "rimraf ./lib",
+    "clean": "npm run clean:dist && npm run test:cjs:clean",
+    "clean:dist": "rimraf ./dist",
     "test": "npm run test:esm && npm run test:cjs",
     "test:esm": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=tests/esm/jest.config.ts",
     "test:cjs": "npm run test:cjs:clean && npm run test:cjs:copy && jest --config=tests/cjs/jest.config.ts",
