--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "prepublishOnly": "npm run clean && npm run build && npm run test && npm run lint"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "typescript": "^5.2.2"
   },
