--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "systemic-ts-utils",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "type": "module",
   "types": "./dist/esm/index.d.ts",
@@ -14,9 +14,9 @@
       "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.js"
     },
-    "./test-utils": {
-      "import": "./dist/esm/test-utils/index.js",
-      "require": "./dist/cjs/test-utils/index.js"
+    "./*": {
+      "import": "./dist/esm/*.js",
+      "require": "./dist/cjs/*.js"
     }
   },
   "scripts": {
