--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "systemic-ts-utils",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "sideEffect": false,
   "description": "",
   "type": "module",
@@ -23,9 +23,6 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "typescript": "^5.2.2"
-  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "eslint": "^8.52.0",
@@ -37,7 +34,8 @@
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "tshy": "^1.7.0"
+    "tshy": "^1.7.0",
+    "typescript": "^5.2.2"
   },
   "tshy": {
     "exports": {
